--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -59,7 +59,7 @@
 
 \begin{document}
 
-\title{Stellar occultation predictions for  10 irregular satellites of giant planets plus Triton for 2015-2017
+\title{Stellar occultation predictions for  10 irregular satellites of giant planets plus Triton up to 2017
 %\fnmsep\thanks{Table 8 are only available in electronic form at the CDS via anonymous ftp to cdsarc.u-strasbg.fr (130.79.128.5) or via http://cdsweb.u-strasbg.fr/cgi-bin/qcat?J/A+A/ and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{The complete version of Table 8 is available through CDS and IAU NSDC data base at www.imcce.fr/nsdc.}
 %\fnmsep\thanks{Partially based on observations made at Laborat\'orio Nacional de Astrof\'{\i}sica (LNA), Itajub\'a-MG, Brazil.}
@@ -79,10 +79,12 @@
 %          \inst{4},      
           J. I. B. Camargo
           \inst{2,4},     
+          J. Desmars
+          \inst{5},
           B. E. Morgado
-          \inst{1,2}
+          \inst{1,2},
           F. Braga-Ribas
-          \inst{2,5}, 
+          \inst{2,6}, 
 %          D. N. da Silva Neto
 %          \inst{6},
 %          A. H. Andrei
@@ -93,8 +95,6 @@
 %          \inst{2},
 %          Y. Duchemin
 %          \inst{4,7},
-%          J. Desmars
-%          \inst{4},
 %          V. Lainey
 %          \inst{4},
 %          W. Thuillot
@@ -114,9 +114,9 @@ CEP 20921-400 Rio de Janeiro - RJ, Brazil\\
 Observatoire de Paris/SYRTE, 77 Avenue Denfert Rochereau 75014 Paris, France
               \and
 Laboratório Interinstitucional de e-Astronomia - LIneA, Rua Gal. José Cristino 77, Rio de Janeiro, RJ 20921-400, Brazil
-%              \and
-%Institut de mécanique céleste et de calcul des éphémérides - Observatoire %de Paris, UMR 8028 du CNRS,
-%77 Av. Denfert-Rochereau, 75014 Paris, France\\
+              \and
+Institut de mécanique céleste et de calcul des éphémérides - Observatoire de Paris, UMR 8028 du CNRS,
+77 Av. Denfert-Rochereau, 75014 Paris, France
 %              \email{arlot@imcce.fr}
               \and
 Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro, 3165, CEP 80230-901, Curitiba, PR, Brazil
@@ -135,7 +135,7 @@ Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro
 {Due to their orbital configurations, it is common belief that the irregular satellites were probably captured by the giant planets in the early solar system. It is important to know their physical parameters, such as size, shape, albedo and composition, to trace back their true origin. The best ground-based technique to determine size and shape, and thus constrain the albedo and in a broader sense composition, is the observation of stellar occultations by these objects.}
 {We aim to predict stellar occultations for the eight biggest irregular satellites of Jupiter: Himalia, Elara, Pasiphae, Carme, Lysithea, Sinope, Ananke and Leda, and for the irregular satellites Phoebe of Saturn and Nereid of Neptune, and also for Triton.}
 {We identified candidates to stellar occultations by the irregular satellites from the UCAC4 catalogue and from a catalogue of stars in the sky-path of Neptune obtained from observations made with the ESO2p2/WFI (2.2 m Max-Planck ESO telescope with the Wide Field Imager) instrument. These catalogues were crossed with the ephemeris of the satellites to identify stellar occultations. We used a new ephemeris based solely on the observations from \cite{GomesJunior2015} to generate predictions for the short-time future for the satellites of Jupiter. For Phoebe, Nereid and Triton we used the JPL ephemeris.}
-{We managed to identify 687 candidates of stellar occultations between the period of January, 2015 and December, 2017. We made observational tests for the prediction of the event of Himalia in March 03, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions.}
+{We managed to identify 396 candidates of stellar occultations between the period of January, 2016 and December, 2017. We made observational tests for the prediction of the event of Himalia in March 03, 2015. The stars and objects were observed close to the date predicted and in the same field to minimize errors and the obtained relative satellite-star positions were used to evaluate the predictions.}
 {The comparisons between the predictions and the observation tests show a good agreement. We discuss how the successful observation of a stellar occultation by these objects is quite possible and present some of those potential occultations.}
 
 
@@ -261,7 +261,7 @@ Triton is an uncommon satellite. Its orbit is retrograde and inclined, but quasi
 
 Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. However, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main motivation to study Triton by stellar occultations is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007, Elliot_2000}.
 
-No observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their distances to us, current ephemeris and star positions are precise enough for the prediction of the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, the cumulated uncertainty of ephemeris and star position must be around 40 mas to get good chances of observing a stellar occultation, which is quite feasible today.
+No observation of a stellar occultation by an irregular satellite was published up to date, excluding Triton. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their distances to us, current ephemeris and star positions are precise enough for the prediction of the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, the cumulated uncertainty of ephemeris and star position must be around 40 mas to get good chances of observing a stellar occultation, which is quite feasible today.
 
 \begin{table}
 \caption{\label{Tab: satellite-diameter} Estimated diameter of the satellites and correspondent apparent diameter}
@@ -269,7 +269,7 @@ No observation of a stellar occultation by an irregular satellite was published 
 \begin{tabular}{lccc}
 \hline  \hline
 \multicolumn{4}{c}{Diameter of the satellites} \tabularnewline
-Satellite  & mas\tablefootmark{a}  & km & References \tabularnewline
+Satellite  & mas\tablefootmark{a}  & km & Ref. \tabularnewline
 \hline
 Ananke & 8 & 29 & 1 \tabularnewline
 Carme & 13 & 46 & 1 \tabularnewline
@@ -401,7 +401,7 @@ The residuals are lower than those obtained with JPL ephemeris, but the accuracy
 
 The obtained ephemeris is hereafter refered as STE, for special-tailored ephemeris.
 
-In this work, the STE was used in all but three satellites, not Jovian ones. For these 3 cases, the JPL ephemeris was used instead. The JPL ephemeris for Phoebe is of enough high quality for the short term, mostly thanks to the observations by Cassini. In the case of Triton, the JPL ephemeris is also good enough, as the relatively large diameter of Triton favours the positive detection of occultations. A new short term ephemeris for Nereid is however still needed, but its production was beyond the scope of this work, so we used the JPL ephemeris in this case too.
+In this work, the STE was used in all but three satellites, not Jovian ones. For these 3 cases, the JPL ephemeris was used instead. The JPL ephemeris for Phoebe is of enough high quality for the short term, mostly thanks to the observations by Cassini. In the case of Triton, the JPL ephemeris is also good enough, as the relatively large diameter of Triton favours the positive detection of occultations. A new short term ephemeris for Nereid is however still needed, but its production was beyond the scope of this work due to its more complicated dynamic, so we used the JPL ephemeris in this case too.
 
 %Making a new model for the orbits of these objects would demand a lot of time and delay the publication of predictions of possible events to occur in the very near future. Thus, we utilized the positions obtained by \cite{GomesJunior2015} to identify error patterns in the ephemeris. The error patterns in right ascension and in declination could be used to extrapolate the offsets to the satellite ephemeris by the time of the predicted occultation, improving it. Plots of the offsets over true anomaly (see Fig. \ref{Fig:offxanom} for declination offsets of Carme, for instance) clearly show the systematic errors in the JPL ephemeris.
 
@@ -447,31 +447,31 @@ The prediction of the occultations was made by crossing the stellar coordinates 
 
 We predicted occultation for the 8 major irregular satellites of Jupiter:  Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae and Sinope; Phoebe of Saturn and Triton and Nereid of Neptune.
 
-For Triton and Nereid, the candidates for stellar occultations in 2015 and 2016 was searched using the WFI catalogue in the same way as the predictions for Centaurs and TNOs occultations by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}. This catalogue contains the stars in the path of Neptune in the sky up to mid-2016. The catalogue was generated by observations made at the ESO 2p2 telescope (IAU code 809) using the Wide Field Imager (WFI) CCD mosaic detector. The filter used was the broad-band R filter ESO\#844 with $\lambda_c$ = 651.725 nm and $\Delta\lambda$ = 162.184 nm.
+For Triton and Nereid, the candidates for stellar occultations in 2016 was searched using the WFI catalogue in the same way as the predictions for Centaurs and TNOs occultations by \cite{Assafin2010, Assafin2012} and \cite{Camargo2014}. This catalogue contains the stars in the path of Neptune in the sky up to mid-2016. The catalogue was generated by observations made at the ESO 2p2 telescope (IAU code 809) using the Wide Field Imager (WFI) CCD mosaic detector. The filter used was the broad-band R filter ESO\#844 with $\lambda_c$ = 651.725 nm and $\Delta\lambda$ = 162.184 nm.
 
-A total of 687 events were identified between January 2015 and December 2017. In table \ref{Tab: satellite-occultation} we present the number of stellar occultations predicted by year for each satellite. Table \ref{Tab: occ-list} shows a sample of the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps (see Fig. \ref{Fig: ocultacao} as an example). Since these objects are very small, the duration of each event is a few seconds. All the occultation tables and maps will be publicly available at the CDS.
+A total of 396 events were identified between January 2016 and December 2017. In table \ref{Tab: satellite-occultation} we present the number of stellar occultations predicted by year for each satellite. Table \ref{Tab: occ-list} shows a sample of the catalogue of occultations generated and their parameters, which are necessary to produce occultation maps (see Fig. \ref{Fig: ocultacao} as an example). Since these objects are very small, the duration of each event is a few seconds. All the occultation tables and maps will be publicly available at the CDS. No star brighter than MagR*=18 was identified to be occulted by Triton in 2016. Since the flux drop during the such an occultation is very small, we don't publish this events.
 
 \begin{table}
-\caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from 2015 up to 2017.}
+\caption{\label{Tab: satellite-occultation} Number of stellar occultations for each satellite from January, 2016 up to December, 2017.}
 \begin{centering}
-\begin{tabular}{lcccc}
+\begin{tabular}{lccc}
 \hline  \hline
 %\multicolumn{4}{c}{Diameter of the satellites} \tabularnewline
-Satellite  & 2015  & 2016 & 2017 & Total \tabularnewline
+Satellite  & 2016 & 2017 & Total \tabularnewline
 \hline
-Ananke & 21 & 12 & 16 & 49 \tabularnewline
-Carme & 26 & 20 & 14 & 60 \tabularnewline
-Elara & 32 & 14 & 16 & 62 \tabularnewline
-Himalia & 26 & 15 & 12 & 53 \tabularnewline
-Leda & 13 & 8 & 24 & 45 \tabularnewline
-Lysithea & 22 & 16 & 11 & 49 \tabularnewline
-Pasiphae & 25 & 20 & 19 & 64 \tabularnewline
-Sinope & 19 & 15 & 21 & 55 \tabularnewline
+Ananke & 12 & 16 & 28 \tabularnewline
+Carme & 20 & 14 & 34 \tabularnewline
+Elara & 14 & 16 & 30 \tabularnewline
+Himalia & 15 & 12 & 27 \tabularnewline
+Leda & 8 & 24 & 32 \tabularnewline
+Lysithea & 16 & 11 & 27 \tabularnewline
+Pasiphae & 20 & 19 & 39 \tabularnewline
+Sinope & 15 & 21 & 36 \tabularnewline
 \hdashline
-Phoebe\tablefootmark{a} & 13 & 32 & 98 & 143 \tabularnewline
+Phoebe\tablefootmark{a} & 32 & 98 & 130 \tabularnewline
 \hdashline
-Nereid\tablefootmark{a} & 41\tablefootmark{b} & 11\tablefootmark{b} & 1 & 53 \tabularnewline
-Triton\tablefootmark{a} & 37\tablefootmark{b} & 16\tablefootmark{b} & 1 & 54 \tabularnewline
+Nereid\tablefootmark{a} & 11\tablefootmark{b} & 1 & 12 \tabularnewline
+Triton\tablefootmark{a} & -- & 1 & 1 \tabularnewline
 \hline
 \end{tabular}
 \par \end{centering}
@@ -514,21 +514,21 @@ d m Year~~~~h~~m~~~s & RA~~~(ICRS)~~~Dec & C/A & P/A & $\nu$ & {\it D} & $R^*$ &
 The first preliminary version of the ESA astrometry satellite GAIA \citep{deBruijne2012} catalogue is expected to be released up to the end of 2016. The precise star positions to be derived by GAIA will provide better predictions with the main source of error being the ephemeris. Astrometric reduction of observations published in \cite{GomesJunior2015} will be revised with the GAIA catalogue and the predictions from 2017 onwards will be better. Because of that, we only publish stellar occultations with UCAC4 until 2017.
 
 
-\section{Occultation tests} \label{Sec: testes}
+\subsection{Occultation test} \label{Sec: testes}
 
-Observing a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because of the size of the irregular satellites. So, before we start a large observational campaign, we tested some occultation predictions for large targets, to assess the quality of the predictions.
+Observing a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because of the size of the irregular satellites. Since no stellar occultation by irregular satellite was observed up to date, with the exception of Triton, and before we start a large observational campaign, we tested an occultation prediction for a large target, to assess the quality of the prediction.
 
-The tests consisted in observing the object and star to be occulted near the date of the event predicted when the two objects were present in the same field of view (FOV), preferably when the objects were close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The relative positions of the star and of the satellites were used to check the original predictions.
+The test consisted in observing the object and star to be occulted near the date of the event predicted when the two objects were present in the same field of view (FOV), preferably when the objects were close to each other. Thus, the relative positions between the two objects had minimal influence of the errors of the reference catalogue of stars used and possible field distortions \citep[and references therein]{Peng2008}. The relative positions of the star and of the satellites were used to check the original predictions.
 
-Two occultation tests were performed, one by Himalia that occurred on March 3, 2015 and the second by Elara that occurred on March 30, 2015. For each event, four situations were considered:
-\begin{enumerate}
+The occultation tested was performed by Himalia that occurred on March 3, 2015. For the event, four situations were considered:
+\begin{enumerate}[I]
 \item Prediction with the STE ephemeris (see Sec. \ref{Sec: integration}), and the nominal UCAC4 position of the star;
 \item Prediction with the JPL ephemeris and the nominal UCAC4 position of the star;
 \item From star and satellite offsets calculated from observations made a few days before the occultation when the objects were separated (different FOVs);
 \item Same as 3 but with the star and the satellite close in the same FOV.
 \end{enumerate}
 
-Figure \ref{Fig: occ-Himalia} shows a zoomed in occultation map with the four situations for Himalia. The line in blue is center of the shadow for the situation 1 in the list above. The line in red using JPL ephemeris (situation 2). The line in black was made from obtained positions on February 22 observed with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart (situation 3). On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the center of the shadow was obtained. Notice that the shadow path was not predicted to cross the OPD (which was located at almost 2000 km from the shadow path). This was not necessary for testing the prediction.
+Table \ref{Tab: comparison-Himalia} shows the differences between the predictions in the four situations. For situation 3 we observed the objects on February 22 with the Zeiss telescope (diameter = 0.6m; FOV = $12\farcm6$; pixel scale = $0\farcs37 / px$) at the Observatório do Pico dos Dias (OPD, IAU code 874, 45\degr 34\arcmin 57\arcsec W, 22\degr 32\arcmin 04\arcsec S, 1864m). On that day, Himalia and the star were observed in separate FOVs as they were still far apart. On the night of the event, March 3, the objects were observed with Perkin-Elmer telescope (diameter = 1.6m; FOV = $5\farcm8$; pixel scale = $0\farcs17 / px$) at OPD just over an hour after the time scheduled for the event. Satellite and star were separated by about 16 arcsec, so very close to each other (situation 4). From the calculated offsets, the center of the shadow was obtained. Notice that the shadow path was not predicted to cross the OPD (which was located at almost 2000 km from the shadow path). This was not necessary for testing the prediction.
 
 %\begin{figure*}
 %\begin{centering}
@@ -541,65 +541,65 @@ Figure \ref{Fig: occ-Himalia} shows a zoomed in occultation map with the four si
 %\end{centering}
 %\end{figure*}
 
-\begin{figure*}
-\begin{centering}
-\includegraphics[width=17.6cm]{figures/HIMALIA.eps}
-\caption{Predictions for Himalia: The straight lines show the center of the shadow over time. In blue is for the prediction using the STE ephemeris showed in Sec. \ref{Sec: integration}. In red the shadow using the JPL ephemeris. In black we apply offsets to the positions of star and satellite accordingly the observations made at February 22. In green, the same for the previous one but with observations made at March 03 when the objects were close to each other. The dots show the closest approach of the shadow for each prediction. The scales are relative to the closest approach of the prediction using the STE ephemeris. The bars show the estimated diameter of the satellite and estimated error of the prediction.}
-\label{Fig: occ-Himalia}
-\end{centering}
-\end{figure*}
+%\begin{figure*}
+%\begin{centering}
+%\includegraphics[width=17.6cm]{figures/HIMALIA.eps}
+%\caption{Predictions for Himalia: The straight lines show the center of the shadow over time. In blue is for the prediction using the STE ephemeris showed in Sec. \ref{Sec: integration}. In red the shadow using the JPL ephemeris. In black we apply offsets to the positions of star and satellite accordingly the observations made at February 22. In green, the same for the previous one but with observations made at March 03 when the objects were close to each other. The dots show the closest approach of the shadow for each prediction. The scales are relative to the closest approach of the prediction using the STE ephemeris. The bars show the estimated diameter of the satellite and estimated error of the prediction.}
+%\label{Fig: occ-Himalia}
+%\end{centering}
+%\end{figure*}
 
-In this event, it is possible to see that the shade does not vary by much among the four predictions being smaller than the estimated diameter of the satellite and error. This suggests that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four situations were 36s, in time along the shadow path and 101km (31 mas) in the direction perpendicular to the shadows (see table \ref{Tab: comparison-Himalia}).
+In this event, it is possible to see that the shade does not vary by much among the four predictions being smaller than the estimated diameter of the satellite and error. This suggests that there was a good probability of observing the event. In fact, the largest differences between the shadows of the four situations were 36s in time along the shadow path and 101km (31 mas) in the direction perpendicular to the shadows.
 
 \begin{table}
 \caption{\label{Tab: comparison-Himalia} Comparison between the predictions of the Himalia occultation at March 03, 2015.}
 \begin{centering}
-\begin{tabular}{lcc}
+\begin{tabular}{lccc}
 \hline  \hline
-\multicolumn{3}{c}{Difference from STE prediction} \tabularnewline
-Method  & Instant of C/A  & C/A   \tabularnewline
+\multicolumn{4}{c}{Difference from STE prediction} \tabularnewline
+Method  & Instant of C/A  & C/A & Sit.   \tabularnewline
 \hline
-STE & 00:39:51 UTC & $0\farcs703$ \tabularnewline
-JPL & -26s & +11mas (36km) \tabularnewline % (284km)
-Feb. 22 Obs. & -14s & -20mas (65km) \tabularnewline % (153km)
-Mar. 03 Obs. & -36s & -09mas (29km) \tabularnewline % (393km)
+STE & 00:39:51 UTC & $0\farcs703$ & I \tabularnewline
+JPL & -26s & +11mas (36km) & II \tabularnewline % (284km)
+Feb. 22 Obs. & -14s & -20mas (65km) & III \tabularnewline % (153km)
+Mar. 03 Obs. & -36s & -09mas (29km) & IV \tabularnewline % (393km)
 \hline
 \end{tabular}
 \par\end{centering}
-%*Closest Approach
+C/A: geocentric closest approach; Sit: Situation test considered.
 \end{table}
 
-The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 the star and satellite could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. %Still, the differences between the maps obtained were relatively small. 
-The largest differences between them were 144s (186 mas) in time along the shadow path and 525 km (153 mas) perpendicular to it (see table \ref{Tab: comparison-Elara}).
+%The second test was with the satellite Elara, which is the second largest irregular satellite of Jupiter. The event was predicted to occur at March 30, 2015. The observations were made on March 25 and April 2, 2015 with the Zeiss telescope. On the night of April 2 the star and satellite could still be observed in the same FOV. Due to Elara being fainter than Himalia by 2 magnitudes, dispersions of the satellite positions on both nights ended up being higher than for Himalia. %Still, the differences between the maps obtained were relatively small. 
+%The largest differences between them were 144s (186 mas) in time along the shadow path and 525 km (153 mas) perpendicular to it (see table \ref{Tab: comparison-Elara}).
 
-\begin{table}
-\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015.}
-\begin{centering}
-\begin{tabular}{lcc}
-\hline  \hline
-\multicolumn{3}{c}{Difference from STE prediction} \tabularnewline
-Method  & Instant of C/A  & C/A  \tabularnewline
-\hline
-STE & 01:45:13 UTC & $1\farcs082$ \tabularnewline
-JPL & +02s & +57mas(195km) \tabularnewline
-Mar. 25 Obs. & -70s & +20mas (68km) \tabularnewline
-Apr. 02 Obs. & +74s & -96mas (330km) \tabularnewline
-\hline
-\end{tabular}
-\par\end{centering}
-\end{table}
+%\begin{table}
+%\caption{\label{Tab: comparison-Elara} Comparison between the predictions of Elara occultation at March 30, 2015.}
+%\begin{centering}
+%\begin{tabular}{lcc}
+%\hline  \hline
+%\multicolumn{3}{c}{Difference from STE prediction} \tabularnewline
+%Method  & Instant of C/A  & C/A  \tabularnewline
+%\hline
+%STE & 01:45:13 UTC & $1\farcs082$ \tabularnewline
+%JPL & +02s & +57mas(195km) \tabularnewline
+%Mar. 25 Obs. & -70s & +20mas (68km) \tabularnewline
+%Apr. 02 Obs. & +74s & -96mas (330km) \tabularnewline
+%\hline
+%\end{tabular}
+%\par\end{centering}
+%\end{table}
 
 
 \section{Discussion} \label{Sec: discussion}
 
-We presented stellar occultations for the period of 2015-2017 for eight irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
+We presented stellar occultations for the period of 2016-2017 for eight irregular satellites of Jupiter: Ananke, Carme, Elara, Himalia, Leda, Lysithea, Pasiphae, and Sinope; one satellite of Saturn: Phoebe; and two satellites of Neptune: Triton and Nereid. The procedure used was the same as that for the prediction of stellar occultations by Pluto and its satellites in \cite{Assafin2010} and by Centaurs and TNOs in \cite{Assafin2012} and \cite{Camargo2014}.
 
-The candidate stars were searched in the UCAC4 catalogue, except for the candidates in 2015 and 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}). From this, a total of 687 events are foreseen. 
+The candidate stars were searched in the UCAC4 catalogue, except for the candidates in 2016 for Triton and Nereid. In this case, we used the WFI catalogue that was generated from observations made with ESO2p2/WFI CCD mosaic that covered the path of Neptune in the sky-plane up to 2016 (see Sec. \ref{Sec: predictions}). From this, a total of 396 events are foreseen. 
 
 The probability of successfully observing an occultation is roughly the ratio of the satellite's diameter by the budget error of ephemeris and star position. Thus, UCAC4 errors ranging between 20 mas - 50 mas combined with a mean accuracy in the JPL ephemeris of 30 mas for Himalia and 150 mas for Leda published in Table 2 of \cite{Jacobson2012} would give 80\%-50\% probability of observing such an event by Himalia and $\approx$3\% for Leda, the smallest irregular satellite in the sample. Observations a few days before the date of occultation predicted may improve the combined accuracy to 40-80 mas, depending on the magnitude of the objects.
 
-The tests made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event would probably have been observed successfully in case there were observers available in the shadow area. %Fig. \ref{Fig: occ-Himalia} shows the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} shows numerically the difference between the maps.
-A similar test was made for an occultation of Elara in March 30, 2015. %The difference between the maps in this case are listed in Table \ref{Tab: comparison-Elara}.
+The test made with an occultation expected to happen in March 03, 2015 for Himalia showed that this event would probably have been observed successfully in case there were observers available in the shadow area. %Fig. \ref{Fig: occ-Himalia} shows the maps made for 4 different offset corrections as explained in Sec. \ref{Sec: testes}. Table \ref{Tab: comparison-Himalia} shows numerically the difference between the maps.
+%A similar test was made for an occultation of Elara in March 30, 2015. %The difference between the maps in this case are listed in Table \ref{Tab: comparison-Elara}.
 The results show satisfying small offsets. %We can expect similar results for other satellites and our method should allow successful stellar occultation.
 
 Continuous observations of the satellites and candidates are recommended and fitting of our dynamical model to those observations are expected to reduce the respective STE ephemeris errors. The GAIA catalogue, which first version is to be released up to the end of 2016 will improve the position error of the stars and will allow for the detection of occultations candidates of fainter stars, which are not present in the UCAC4 catalogue. % Consequently, the astrometry of the satellites with the GAIA catalogue will improve the position errors allowing for better predictions and a higher probabilities of observing stellar occultations by irregular satellites.
